fix(tools): supply fresh mark prices in cluster validation workloads